--- a/pom.xml
+++ b/pom.xml
@@ -156,7 +156,16 @@
             <version>1.1-groovy-2.4</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>com.thedeanda</groupId>
+            <artifactId>lorem</artifactId>
+            <version>1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.7</version>
+        </dependency>
 
     </dependencies>
 
