--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,9 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
-        <powerMockVersion>1.7.1</powerMockVersion>
+        <powerMockVersion>1.6.4</powerMockVersion>
         <unirest-java-version>1.4.9</unirest-java-version>
+        <mockito-version>1.10.19</mockito-version>
     </properties>
 
     <dependencies>
@@ -87,9 +88,15 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>${mockito-version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.powermock</groupId>
             <artifactId>powermock-mockito-release-full</artifactId>
-            <version>1.6.4</version>
+            <version>${powerMockVersion}</version>
             <type>pom</type>
             <scope>test</scope>
         </dependency>
