--- a/pom.xml
+++ b/pom.xml
@@ -8,13 +8,13 @@
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>clis</name>
-    <description>Demo project for Spring Boot</description>
+    <name>uPaid_HR</name>
+    <description>Upaid HR project</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.9.RELEASE</version>
+        <version>2.0.0.RELEASE</version>
 
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
@@ -26,6 +26,7 @@
         <powerMockVersion>1.7.3</powerMockVersion>
         <unirest-java-version>1.4.9</unirest-java-version>
         <mockito-version>2.8.9</mockito-version>
+
     </properties>
 
     <dependencies>
@@ -37,10 +38,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-actuator-docs</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-rest</artifactId>
@@ -53,15 +51,8 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-thymeleaf</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <scope>runtime</scope>
-        </dependency>
+
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -107,7 +98,7 @@
         <dependency>
             <groupId>org.powermock</groupId>
             <artifactId>powermock-api-mockito2</artifactId>
-            <version>1.7.3</version>
+            <version>${powerMockVersion}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -167,31 +158,32 @@
             <version>3.7</version>
         </dependency>
         <dependency>
-            <groupId>com.google.api-client</groupId>
-            <artifactId>google-api-client</artifactId>
-            <version>1.23.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.google.api-client</groupId>
-            <artifactId>google-api-client</artifactId>
-            <version>1.23.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.google.apis</groupId>
-            <artifactId>google-api-services-gmail</artifactId>
-            <version>v1-rev79-1.23.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.google.api-client</groupId>
-            <artifactId>google-api-client-java6</artifactId>
-            <version>1.23.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.google.oauth-client</groupId>
-            <artifactId>google-oauth-client-jetty</artifactId>
-            <version>1.23.0</version>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.6</version>
         </dependency>
 
+        <!--Dependency for Google oath for sending emails -->
+        <!--<dependency>-->
+        <!--<groupId>com.google.oauth-client</groupId>-->
+        <!--<artifactId>google-oauth-client-jetty</artifactId>-->
+        <!--<version>1.23.0</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!--<groupId>com.google.api-client</groupId>-->
+        <!--<artifactId>google-api-client</artifactId>-->
+        <!--<version>1.23.0</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!--<groupId>com.google.apis</groupId>-->
+        <!--<artifactId>google-api-services-gmail</artifactId>-->
+        <!--<version>v1-rev79-1.23.0</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!--<groupId>com.google.api-client</groupId>-->
+        <!--<artifactId>google-api-client-java6</artifactId>-->
+        <!--<version>1.23.0</version>-->
+        <!--</dependency>-->
 
     </dependencies>
 
